Bug 256967 - [WGSL] Struct members shouldn't have built-in attributes
Summary: [WGSL] Struct members shouldn't have built-in attributes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-18 08:56 PDT by Tadeu Zagallo
Modified: 2023-05-18 23:07 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-05-18 08:56:55 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-05-18 08:57:17 PDT
<rdar://problem/109515831>
Comment 2 Tadeu Zagallo 2023-05-18 09:00:38 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14019
Comment 3 EWS 2023-05-18 23:07:40 PDT
Committed 264231@main (d6f9f3ee61b8): <https://commits.webkit.org/264231@main>

Reviewed commits have been landed. Closing PR #14019 and removing active labels.