[WGSL] Struct members shouldn't have built-in attributes https://bugs.webkit.org/show_bug.cgi?id=256967 rdar://109515831

Reviewed by Mike Wyrzykowski and Dan Glastonbury.

It's invalid for MSL code to have built-in attributes in struct members, and at
this point of the compilation these inputs were already hoisted into parameters
of the entry point function, so we should just skip the serialization of built-in
attributes if we are serializing a struct.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/264231@main